[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/GUI/FloatingResourceBar/FloatingResourceBar.gd" type="Script" id=1]
[ext_resource path="res://Assets/GUI/FloatingResourceBar/mana_progress_bar.png" type="Texture" id=2]
[ext_resource path="res://Assets/GUI/FloatingResourceBar/progress_bar.png" type="Texture" id=3]
[ext_resource path="res://Assets/GUI/FloatingResourceBar/mana.png" type="Texture" id=4]
[ext_resource path="res://Assets/GUI/FloatingResourceBar/health.png" type="Texture" id=5]

[node name="FloatingResourceBar3D" type="Sprite3D"]
billboard = 1
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 400, 87 )
transparent_bg = true
usage = 0
render_target_v_flip = true

[node name="HealthManaBar2D" type="Control" parent="Viewport"]
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Viewport/HealthManaBar2D"]
anchor_right = 1.0
anchor_bottom = 1.37
margin_right = 400.0
margin_bottom = 87.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Viewport/HealthManaBar2D/MarginContainer"]
margin_right = 400.0
margin_bottom = 87.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="Viewport/HealthManaBar2D/MarginContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 50.0
size_flags_horizontal = 0
size_flags_vertical = 0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaBar" type="TextureProgress" parent="Viewport/HealthManaBar2D/MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 400.0
margin_bottom = 87.0
size_flags_horizontal = 0
size_flags_vertical = 0
value = 100.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}
